# computegraphics

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  makefile  makefile_win
example/: lorem_ipsum.c  mandelbrot.c  test.c  test.glsl  text.c
font/: font_64.ase  font_array_generator.py  font_generator.lua
include/: k_result.h
src/: _microcanvas.h  _microfb.h  canvas_clear_tool.c  core.c  main.c  microcanvas.h  microfb.h  text_draw_tool.c  text_tool.c
src/_glad/: glad.c
src/compute/: buffer.c  compute.h  compute_internal.h  core.c  program.c
src/graphics/: canvas.c  graphics.c  graphics.h  graphics_internal.h
src/tools/: clear.c  text.c
src/util/: gl_util.c  gl_util.h
